# GrammarScoreEngine

./: .replit  app.py  audio_handler.py  grammar_analyzer.py  pyproject.toml  requirements.txt.txt  simple_grammar_checker.py  utils.py
attached_assets/: Pasted-ile-home-runner-workspace-pythonlibs-lib-python3-11-site-packages-streamlit-runtime-scriptrunner--1746281581900.txt
