[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "language-tool-python>=2.9.3",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyaudio>=0.2.14",
    "speechrecognition>=3.14.2",
    "streamlit>=1.45.0",
]
